--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -107,6 +110,96 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
+        </div>
+    </div>
+
+    <div class="section_every">
+        <div class="container">
+            <div class="row  align-items-center mt-5  ">
+                <div class="col-md-6">
+                    <img class="img-fluid" src="media/wedding.png" alt="">
+                </div>
+                <div class="col-md-6">
+                    <h1>Every moment is Precious </h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class=" btn bg-primary">Explore our album <i class="fa-solid fa-arrow-right"></i> </button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="package_section">
+        <h1 class="text-center pt-5">Our package</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <h1 class="font-weight-bold pt-5">$300</h1>
+                    <h3 class="">Business fair</h3>
+                    <p>For most businesses event
+                        like book fair, craft fair.</p>
+                    <ul style="list-style-image:url(media/crclr.png)">
+                        <li>limited space access</li>
+                        <li>Secuirty facility</li>
+                        <li>event support</li>
+                        <li>Decoration design</li>
+                        <li>Per day bill</li>
+                    </ul>
+                    <div class="text-center">
+                        <button class="btn bg-light text-primary ">Choose plan</button>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h1 class="font-weight-bold pt-5">$300</h1>
+                    <h3 class="">Business fair</h3>
+                    <p>For most businesses event
+                        like book fair, craft fair.</p>
+                    <ul style="list-style-image:url(media/crclr.png)">
+                        <li>limited space access</li>
+                        <li>Secuirty facility</li>
+                        <li>event support</li>
+                        <li>Decoration design</li>
+                        <li>Per day bill</li>
+                    </ul>
+                    <div class="text-center">
+                        <button class="btn bg-light text-primary ">Choose plan</button>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h1 class="font-weight-bold pt-5">$300</h1>
+                    <h3 class="">Business fair</h3>
+                    <p>For most businesses event
+                        like book fair, craft fair.</p>
+                    <ul style="list-style-image:url(media/crclr.png)">
+                        <li>limited space access</li>
+                        <li>Secuirty facility</li>
+                        <li>event support</li>
+                        <li>Decoration design</li>
+                        <li>Per day bill</li>
+                    </ul>
+                    <div class="text-center">
+                        <button class="btn bg-light text-primary ">Choose plan</button>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h1 class="font-weight-bold pt-5">$300</h1>
+                    <h3 class="">Business fair</h3>
+                    <p>For most businesses event
+                        like book fair, craft fair.</p>
+                    <ul style="list-style-image:url(media/crclr.png)">
+                        <li>limited space access</li>
+                        <li>Secuirty facility</li>
+                        <li>event support</li>
+                        <li>Decoration design</li>
+                        <li>Per day bill</li>
+                    </ul>
+                    <div class="text-center">
+                        <button class="btn bg-light text-primary ">Choose plan</button>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
