--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
 
-
-
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
@@ -116,7 +114,7 @@
     <div class="section_every">
         <div class="container">
             <div class="row  align-items-center mt-5  ">
-                <div class="col-md-6">
+                <div class="col-md-6 ">
                     <img class="img-fluid" src="media/wedding.png" alt="">
                 </div>
                 <div class="col-md-6">
@@ -329,7 +327,8 @@
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
 
-                    <p class="text-center">Get the App</p>
+                    <p>Get the App</p>
+                    <img src="media/play.png" alt="">
 
                 </div>
             </div>
